force-app/main/default/objects/ssot__PromotionTemplate__dlm/fields/ssot__Descrpition__c.field-meta.xml
<CustomField>
    <fullName>ssot__Descrpition__c</fullName>
    <label>Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Descrpition</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>