force-app/main/default/objects/ssot__PromotionTemplate__dlm/fields/ssot__TemplateCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__TemplateCategory__c</fullName>
    <label>Template Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TemplateCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>