force-app/main/default/objects/ssot__PromotionTemplate__dlm/fields/ssot__TemplateVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TemplateVersionNumber__c</fullName>
    <label>Template Version</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TemplateVersionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>